--- a/walkthrough.html
+++ b/walkthrough.html
@@ -121,7 +121,14 @@
                             <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:guides" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Guides" aria-level="1">
                                 <a href="/lrt.html" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">
                                     <div class="mm-nav-link">
-                                        <div class="mm-top-level-title">Loan Eligibility</div>
+                                        <div class="mm-top-level-title">Eligibility Assessment</div>
+                                    </div>
+                                </a>
+                            </li>
+                            <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:guides" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Guides" aria-level="1">
+                                <a id="loanDiscovery" href="/lrt.html?discovery" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">
+                                    <div class="mm-nav-link">
+                                        <div class="mm-top-level-title">Loan Discovery</div>
                                     </div>
                                 </a>
                             </li>
@@ -307,6 +314,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <script src="js/moz_viewer_controller.js"></script>
+    <script src="js/farmers.min.js"></script>
 
     <script>
         (function() {
