--- a/guides.html
+++ b/guides.html
@@ -22,9 +22,9 @@
 
 <body>
 
-     <!-- ======= Header ======= -->
+    <!-- ======= Header ======= -->
 
-     <header class="main-header" role="banner" aria-label="Page Header">
+    <header class="main-header" role="banner" aria-label="Page Header">
         <!--wrapper for main header used to hide on print-->
         <div class="head-main">
             <a href="#main-content" class="skip-nav" role="navigation" aria-label="Skip to Main Content">            Skip to main content        </a>
@@ -40,6 +40,21 @@
                   <span class="usa-banner-button-text">Here’s how you know</span>    
                 </button>
                                 </p>
+                                <div id="nav-branding-bar">
+                                    <ul class="mm-branding-bar-menu">
+                                        <li>
+                                            <a href="#">Branding Bar Link</a>
+                                            <span class="seperator">|</span>
+                                        </li>
+                                        <li>
+                                            <a href="#">Branding Bar Link</a>
+                                            <span class="seperator">|</span>
+                                        </li>
+                                        <li>
+                                            <a href="#">Branding Bar Link</a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -84,18 +99,18 @@
                     <div class="utility-nav">
                         <ul class="usa-unstyled-list utility-nav-links usa-nav-secondary-links">
                             <li>
-                                <a href="https://www.fsa.usda.gov/about-fsa/index">About FSA</a>
+                                <a href="#">Utility Nav Link</a>
                             </li>
                             <li>
-                                <a href="https://ask.usda.gov/s/">Ask USDA</a>
+                                <a href="#">Utility Nav Link</a>
                             </li>
                             <li>
-                                <a href="https://www.fsa.usda.gov/contact-us">Contact Us</a>
-                            </li>
-                            <li>
-                                <a href="https://forms.sc.egov.usda.gov/eForms/welcomeAction.do?Home">Forms</a>
+                                <a href="#">Utility Nav Link</a>
                             </li>
                         </ul>
+                        <span class="utility-nav-buttons">
+            <a class="btn tertiary utility-nav-links" href="/working-with-us/sign-in" title="LOG IN | SIGN UP">LOG IN | SIGN UP</a>                    
+          </span>
                     </div>
                 </div>
             </div>
@@ -122,7 +137,14 @@
                                 <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:guides" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Guides" aria-level="1">
                                     <a href="/lrt.html" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">
                                         <div class="mm-nav-link">
-                                            <div class="mm-top-level-title">Loan Eligibility</div>
+                                            <div class="mm-top-level-title">Eligibility Assessment</div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:guides" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Guides" aria-level="1">
+                                    <a id="loanDiscovery" href="/lrt.html?discovery" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">
+                                        <div class="mm-nav-link">
+                                            <div class="mm-top-level-title">Loan Discovery</div>
                                         </div>
                                     </a>
                                 </li>
@@ -143,7 +165,7 @@
                                 <input name="utf8" type="hidden" value="✓">
                                 <input id="affiliatename" name="affiliate" type="hidden" value="[ SITE DOMAIN ]">
                                 <label class="usa-sr-only" for="header-search">Search [ SITE DOMAIN ]</label>
-                                <input id="header-search" autocomplete="off" name="query" type="search" placeholder="Search Application Forms" tabindex="0">
+                                <input id="header-search" autocomplete="off" name="query" type="search" placeholder="Search [ SITE DOMAIN ]" tabindex="0">
                                 <button type="submit" tabindex="0">    
                 <span class="usa-sr-only">Search</span>
               </button>
@@ -205,6 +227,19 @@
                             </div>
                         </div>
                         <div class="mm-utility-nav">
+                            <ul class="mm-branding-bar-menu">
+                                <li>
+                                    <a href="#">Branding Bar Nav</a>
+                                    <span class="seperator">|</span>
+                                </li>
+                                <li>
+                                    <a href="#">Branding Bar Nav</a>
+                                    <span class="seperator">|</span>
+                                </li>
+                                <li>
+                                    <a href="#">Branding Bar Nav</a>
+                                </li>
+                            </ul>
                             <ul class="usa-unstyled-list utility-nav-links usa-nav-secondary-links">
                                 <li>
                                     <a href="/coronavirus/pandemic-assistance" title="USDA is dedicated to reaching a broad set of producers and agricultural businesses through our Pandemic Assistance for Producers initiative. " aria-label="Pandemic Assistance" tabindex="0" data-drupal-link-system-path="node/29151">Pandemic Assistance</a>
@@ -242,38 +277,34 @@
 
 
 
+
     <div class="container page">
 
-        <div class="row">
-
-            <div class="col-md-3">
-                <div class="content-card accent-top h-100">
-                    <div class="headline">
-                        <h3>Application Guides</h3>
-                    </div>
-                    <div class="content">
-                        <p>
-                            The guides below can provide you with some general information about the farm loan application process.
-                        </p>
-                    </div>
-                    <div class="link" id="guide-links"></div>
+        <div class="row row-cols-1 row-cols-md-3 g-4" id="forms-holder">
+            <div class="col">
+                <div class="content-card accent-top form-card h-100">
+                  <div class="headline mb-5">
+                    <h3><a class="text-link" href="/guides/your_guide_to_farm_loans.pdf" download>Your Guide to FSA Farm Loans </a></h3>
+                  </div>
+                  <div class="content">
+                    <p>
+                      This booklet is for anyone who is seeking an FSA farm loan. It provides an overview of the USDA Farm Service Agency's Farm programs, loan types, eligibility requirements, and the application process.
+                    </p>
+                  </div>                  
                 </div>
             </div>
-
-            <div class="col-md-9">
-                <div class="content-card accent-top h-100">
-                    <div class="headline">
-                        <h3 id="form-title">...</h3>
-                        <p id="form-desc">...</p>
-                    </div>
-                    <div class="content">
-                        <iframe id="mozViewerFrame" src="" width="100%" height="700px">
-            Loading Files
-          </iframe>
-                    </div>
+            <div class="col">
+                <div class="content-card accent-top form-card h-100">
+                  <div class="headline mb-5">
+                    <h3><a class="text-link" href="/guides/fsa_farm__loan_compass.pdf" download>Your FSA Farm Loan Compass</a></h3>
+                  </div>
+                  <div class="content">
+                    <p>
+                      This guide is for recipients of FSA farm loans. It clarifies the partnership between FSA and the loan recipient and outlines the responsibilities of both parties.
+                    </p>
+                  </div>                  
                 </div>
             </div>
-
         </div>
 
     </div>
@@ -297,7 +328,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <script src="js/moz_viewer_controller.js"></script>
-    <!-- <script src="js/farmers.min.js"></script> -->
+    <script src="js/farmers.min.js"></script>
 
 
     <script>
