--- a/index.html
+++ b/index.html
@@ -122,7 +122,14 @@
                                 <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:guides" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Guides" aria-level="1">
                                     <a href="/lrt.html" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">
                                         <div class="mm-nav-link">
-                                            <div class="mm-top-level-title">Loan Eligibility</div>
+                                            <div class="mm-top-level-title">Eligibility Assessment</div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:guides" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Guides" aria-level="1">
+                                    <a id="loanDiscovery" href="/lrt.html?discovery" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">
+                                        <div class="mm-nav-link">
+                                            <div class="mm-top-level-title">Loan Discovery</div>
                                         </div>
                                     </a>
                                 </li>
@@ -220,6 +227,7 @@
                                 </li>
                             </ul>
                             <span class="utility-nav-buttons">
+              <a class="btn tertiary utility-nav-links" href="/working-with-us/sign-in" title="LOG IN | SIGN UP">    LOG IN | SIGN UP</a>
             </span>
                         </div>
                     </div>
@@ -246,7 +254,7 @@
         
         <div class="row">
             <div class="col-md-12">
-                <h2 aria-label="Are you ready to apply for a farm loan?" title="Are you ready to apply for a farm loan?">Are you ready to apply for a farm loan?</h2>
+                <h2 aria-label="Are your ready to apply for a farm loan?" title="Are your ready to apply for a farm loan?">Are your ready to apply for a farm loan?</h2>
             </div>
         </div>
         
@@ -271,16 +279,11 @@
                                 <li>Where can I get  help completing the loan application forms?</li>
                             </ul>
                         </p>
-                        <div class="container text-center">
-                            <a type="button" href="lrt.html" class="btn btn-success btn-start">Get Started</a>
-                        </div>
-                        <p>
-                            Additional Resources
-                                                </p>
                         <div class="container text-center pt-2">
                             <div class="btn-group" role="group">
-                                <a type="button" href="walkthrough.html" class="btn btn-secondary">Form Support</a>
-                                <a type="button" href="guides.html" class="btn btn-secondary">Read The Guides</a>
+                                <a type="button" href="lrt.html" class="btn btn-success">Get Started</a>
+                                <a type="button" href="walkthrough.html" class="btn btn-success">Form Support</a>
+                                <a type="button" href="guides.html" class="btn btn-success">Read The Guides</a>
 
                             </div>
                         </div>
@@ -298,11 +301,9 @@
                     </div>
                     <div class="content">
                         <p class="text-center mt-3">
-                            <div class="video-container">
-                                <iframe src="https://www.youtube.com/embed/dPfq0DrkUSE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                            </div>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/dPfq0DrkUSE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </p>
-                        <p>Watch the short video above to learn about FSA farm loans.</p>
+                        <p>Watch the short video above. Then, click the button below to see if you are eligible.</p>
                     </div>
                 </div>
             </div>
