button border removed

--- a/guides.html
+++ b/guides.html
@@ -37,24 +37,9 @@
                             <div class="usa-banner-text">
                                 <p> An official website of the United States government
                                     <button class="usa-accordion-button usa-banner-button" aria-expanded="false" aria-controls="gov-banner">        
-                  <span class="usa-banner-button-text">Here’s how you know</span>    
-                </button>
+                                      <span class="usa-banner-button-text">Here’s how you know</span>    
+                                    </button>
                                 </p>
-                                <div id="nav-branding-bar">
-                                    <ul class="mm-branding-bar-menu">
-                                        <li>
-                                            <a href="#">Branding Bar Link</a>
-                                            <span class="seperator">|</span>
-                                        </li>
-                                        <li>
-                                            <a href="#">Branding Bar Link</a>
-                                            <span class="seperator">|</span>
-                                        </li>
-                                        <li>
-                                            <a href="#">Branding Bar Link</a>
-                                        </li>
-                                    </ul>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -99,18 +84,18 @@
                     <div class="utility-nav">
                         <ul class="usa-unstyled-list utility-nav-links usa-nav-secondary-links">
                             <li>
-                                <a href="#">Utility Nav Link</a>
+                                <a href="https://www.fsa.usda.gov/about-fsa/index">About FSA</a>
                             </li>
                             <li>
-                                <a href="#">Utility Nav Link</a>
+                                <a href="https://ask.usda.gov/s/">Ask USDA</a>
                             </li>
                             <li>
-                                <a href="#">Utility Nav Link</a>
+                                <a href="https://www.fsa.usda.gov/contact-us">Contact Us</a>
+                            </li>
+                            <li>
+                                <a href="https://forms.sc.egov.usda.gov/eForms/welcomeAction.do?Home">Forms</a>
                             </li>
                         </ul>
-                        <span class="utility-nav-buttons">
-            <a class="btn tertiary utility-nav-links" href="/working-with-us/sign-in" title="LOG IN | SIGN UP">LOG IN | SIGN UP</a>                    
-          </span>
                     </div>
                 </div>
             </div>
@@ -167,8 +152,8 @@
                                 <label class="usa-sr-only" for="header-search">Search [ SITE DOMAIN ]</label>
                                 <input id="header-search" autocomplete="off" name="query" type="search" placeholder="Search [ SITE DOMAIN ]" tabindex="0">
                                 <button type="submit" tabindex="0">    
-                <span class="usa-sr-only">Search</span>
-              </button>
+                                    <span class="usa-sr-only">Search</span>
+                                </button>
                                 <input name="commit" type="hidden" value="Search">
                             </div>
                         </form>
