--- a/guides.html
+++ b/guides.html
@@ -258,12 +258,35 @@
 
     <!-- End Header -->
 
+    <main id="main-content">
+
+    <div class="container">
+        <div class="row">
+            <div class="primary-region medium-12">
+                <h1 class="primary-region__title">
+                    Learn About Our FSA Farm Loan Programs
+                </h1>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="farmers-landing-page row">
+            <div class="primary-region medium-12">
+                <div class="primary-region__header">
+                    <p>The following guides provide comprehensive information about FSA Farm Loans. The downloadable PDFs can be saved to your local machine or printed out for your records.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="divider-line"></div>
+    </div>
 
 
 
-
-
-    <div class="container page">
+    <div class="container ">
 
         <div class="row row-cols-1 row-cols-md-3 g-4" id="forms-holder">
             <div class="col">
@@ -293,6 +316,8 @@
         </div>
 
     </div>
+</main>
+
 
 
 
