Resposive and working search

--- a/guides.html
+++ b/guides.html
@@ -145,18 +145,18 @@
                         </div>
                     </div>
                     <div id="search-field">
-                        <form class="search" action="[ SEARCH URL ]" data-drupal-form-fields="affiliate,header-search">
-                            <div role="search" aria-label="Site Search">
-                                <input name="utf8" type="hidden" value="✓">
-                                <input id="affiliatename" name="affiliate" type="hidden" value="[ SITE DOMAIN ]">
-                                <label class="usa-sr-only" for="header-search">Search [ SITE DOMAIN ]</label>
-                                <input id="header-search" autocomplete="off" name="query" type="search" placeholder="Search [ SITE DOMAIN ]" tabindex="0">
-                                <button type="submit" tabindex="0">    
-                                    <span class="usa-sr-only">Search</span>
-                                </button>
-                                <input name="commit" type="hidden" value="Search">
-                            </div>
-                        </form>
+                        <form class="search" action="walkthrough.html" data-drupal-form-fields="affiliate,header-search">
+                        <div role="search" aria-label="Site Search">
+                            <input name="utf8" type="hidden" value="✓">
+                            <input id="affiliatename" name="affiliate" type="hidden" value="Application Forms">
+                            <label class="usa-sr-only" for="header-search">Search Application Forms</label>
+                            <input id="header-search" autocomplete="off" name="query" type="search" placeholder="Search Application Forms" tabindex="0">
+                            <button type="submit" tabindex="0">    
+            <span class="usa-sr-only">Search</span>
+          </button>
+                            <input name="commit" type="hidden" value="Search">
+                        </div>
+                    </form>
                     </div>
                 </div>
             </nav>
@@ -363,11 +363,11 @@
                 } else {
                     show_anchor = $("#guide-0");
                 }
-                showPDF(
-                    show_anchor.attr("data-file-name"),
-                    title = show_anchor.attr("data-title"),
-                    desc = show_anchor.attr("data-desc"),
-                );
+                // showPDF(
+                //     show_anchor.attr("data-file-name"),
+                //     title = show_anchor.attr("data-title"),
+                //     desc = show_anchor.attr("data-desc"),
+                // );
             });
         })();
     </script>
