--- a/lrt.html
+++ b/lrt.html
@@ -87,12 +87,6 @@
                     <div class="utility-nav">
                         <ul class="usa-unstyled-list utility-nav-links usa-nav-secondary-links">
                             <li>
-                                <a href="https://www.fsa.usda.gov/about-fsa/index">About FSA</a>
-                            </li>
-                            <li>
-                                <a href="https://ask.usda.gov/s/">Ask USDA</a>
-                            </li>
-                            <li>
                                 <a href="https://www.fsa.usda.gov/contact-us">Contact Us</a>
                             </li>
                             <li>
@@ -155,8 +149,8 @@
                                 <label class="usa-sr-only" for="header-search">Search Application Forms</label>
                                 <input id="header-search" autocomplete="off" name="query" type="search" placeholder="Search Application Forms" tabindex="0">
                                 <button type="submit" tabindex="0">    
-                <span class="usa-sr-only">Search</span>
-              </button>
+                                    <span class="usa-sr-only">Search</span>
+                                  </button>
                                 <input name="commit" type="hidden" value="Search">
                             </div>
                         </form>
@@ -193,10 +187,11 @@
                                 </div>
                             </div>
                             <div class="mm-top-section">
-                                <a class="mm-mobile-top-nav home" href="/">Home</a>
-                                <div class="mm-top-nav-header">Jump to list of pages for:</div>
-                                <ul class="mm-top-nav">
-                                </ul>
+                                <a class="mm-mobile-top-nav home" href="/">Home</a>                               
+                                <a class="mm-mobile-top-nav home" href="/guides.html">Guides</a>
+                                <a class="mm-mobile-top-nav home" href="/lrt.html">Eligibility Assessment</a>
+                                <a class="mm-mobile-top-nav home" href="/lrt.html?discovery">Loan Discovery</a>
+                                <a class="mm-mobile-top-nav home" href="/workthrough.html">Form Support</a>
                             </div>
                         </div>
                         <div class="mm-utility-nav">
