--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                     <div class="agency-banner">
                         <div class="agency-logo">
                             <span class="agency-logo">
-              <img id="block-farmers-update-branding--2" class=" ls-is-cached lazyloaded" loading="lazy" src="/images/usda-symbol.svg" alt="USDA Logo">
-            </span>
+                              <img id="block-farmers-update-branding--2" class=" ls-is-cached lazyloaded" loading="lazy" src="/images/usda-symbol.svg" alt="USDA Logo">
+                            </span>
                             <a class="agency-logo-text" href="/" aria-label="Farm Service Agency - U.S. DEPARTMENT OF AGRICULTURE Farm Loan Walkthrough">
                                 <div class="agency-identity">
                                     <div class="agency-name">Farm Service Agency</div>
@@ -83,13 +83,7 @@
                     </div>
                     <div class="utility-nav">
                         <ul class="usa-unstyled-list utility-nav-links usa-nav-secondary-links">
-                            <li>
-                                <a href="https://www.fsa.usda.gov/about-fsa/index">About FSA</a>
-                            </li>
-                            <li>
-                                <a href="https://ask.usda.gov/s/">Ask USDA</a>
-                            </li>
-                            <li>
+                             <li>
                                 <a href="https://www.fsa.usda.gov/contact-us">Contact Us</a>
                             </li>
                             <li>
@@ -190,10 +184,11 @@
                                 </div>
                             </div>
                             <div class="mm-top-section">
-                                <a class="mm-mobile-top-nav home" href="/">Home</a>
-                                <div class="mm-top-nav-header">Jump to list of pages for:</div>
-                                <ul class="mm-top-nav">
-                                </ul>
+                                <a class="mm-mobile-top-nav home" href="/">Home</a>                               
+                                <a class="mm-mobile-top-nav home" href="/guides.html">Guides</a>
+                                <a class="mm-mobile-top-nav home" href="/lrt.html">Eligibility Assessment</a>
+                                <a class="mm-mobile-top-nav home" href="/lrt.html?discovery">Loan Discovery</a>
+                                <a class="mm-mobile-top-nav home" href="/workthrough.html">Form Support</a>
                             </div>
                         </div>
                         <div class="mm-utility-nav">
@@ -212,8 +207,8 @@
                                 </li>
                             </ul>
                             <span class="utility-nav-buttons">
-              <a class="btn tertiary utility-nav-links" href="/working-with-us/sign-in" title="LOG IN | SIGN UP">    LOG IN | SIGN UP</a>
-            </span>
+                              <a class="btn tertiary utility-nav-links" href="/working-with-us/sign-in" title="LOG IN | SIGN UP">    LOG IN | SIGN UP</a>
+                            </span>
                         </div>
                     </div>
                 </div>
