--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                                 <a class="mm-mobile-top-nav home" href="/guides.html">Guides</a>
                                 <a class="mm-mobile-top-nav home" href="/lrt.html">Eligibility Assessment</a>
                                 <a class="mm-mobile-top-nav home" href="/lrt.html?discovery">Loan Discovery</a>
-                                <a class="mm-mobile-top-nav home" href="/workthrough.html">Form Support</a>
+                                <a class="mm-mobile-top-nav home" href="/walkthrough.html">Form Support</a>
                             </div>
                         </div>
                         <div class="mm-utility-nav">
@@ -229,74 +229,74 @@
 
     <main id="main-content">
 
-    <div class="container">
-        <div class="row">
-            <div class="primary-region medium-12">
-                <h1 class="primary-region__title">
-                    Are your ready to apply for a farm loan?
+        <div class="container">
+            <div class="row">
+                <div class="primary-region medium-12">
+                    <h1 class="primary-region__title">
+                        Are your ready to apply for a farm loan?
 
-                </h1>
-            </div>
-        </div>
-    </div>
-
-    <div class="container page">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="content-card accent-top h-100">
-                    <div class="img">
-                        <img src="/images/farm-loans-icon.png" alt="Farm">
-                    </div>
-                    <div class="content">
-                        
-                        <div class="container">
-                            <div class="card">
-                                <img src="/images/zoomph.jpg" class="card-img-top" alt="Get Started">
-                                <h3 class="card-header">Start your journey with FSA</h3>
-                                <div class="card-body">
-                                    <ul>
-                                        <li>Am I eligible for an FSA Farm Loan?</li>
-                                        <li>Which loans are right for me?</li>
-                                        <li>Where can I get  help completing the loan application forms?</li>
-                                    </ul>
-                                </div>
-                                <a href="lrt.html" style="text-decoration: none;">
-                                    <div class="card-footer btn-start">
-                                        Get Started
-                                    </div>
-                                </a>
-                              </div>
-                        </div>
-                    </div>
+                    </h1>
                 </div>
             </div>
+        </div>
 
-            <div class="col-md-6">
-                <div class="content-card accent-top h-100">
-                    <div class="img">
-                        <img src="/images/tractor-equipment-icon.svg" alt="Farm">
-                    </div>
-
-                    <div class="card">
-                        <iframe height="440px" src="https://www.youtube.com/embed/dPfq0DrkUSE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <h3 class="card-header">FSA Farm Loans</h3>
-                        <div class="card-body">
-                          <p class="card-text">Watch the short video above. Then, click Get Started to see if you are eligible.</p>
+        <div class="container page">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="content-card accent-top h-100">
+                        <div class="img">
+                            <img src="/images/farm-loans-icon.png" alt="Farm">
                         </div>
-                        <h3 class="card-header">Additional Resources</h3>
-                        <div class="card-body text-center">
-                            <div class="btn-group" role="group">
-                                <a type="button" href="walkthrough.html" class="btn btn-secondary">Form Support</a>
-                                <a type="button" href="guides.html" class="btn btn-secondary">Read The Guides</a>
+                        <div class="content">
+                            
+                            <div class="container">
+                                <div class="card">
+                                    <img src="/images/zoomph.jpg" class="card-img-top" alt="Get Started">
+                                    <h3 class="card-header">Start your journey with FSA</h3>
+                                    <div class="card-body">
+                                        <ul>
+                                            <li>Am I eligible for an FSA Farm Loan?</li>
+                                            <li>Which loans are right for me?</li>
+                                            <li>Where can I get  help completing the loan application forms?</li>
+                                        </ul>
+                                    </div>
+                                    <a href="lrt.html" style="text-decoration: none;">
+                                        <div class="card-footer btn-start">
+                                            Get Started
+                                        </div>
+                                    </a>
+                                  </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
+                <div class="col-md-6">
+                    <div class="content-card accent-top h-100">
+                        <div class="img">
+                            <img src="/images/tractor-equipment-icon.svg" alt="Farm">
+                        </div>
+
+                        <div class="card">
+                            <iframe height="440px" src="https://www.youtube.com/embed/dPfq0DrkUSE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <h3 class="card-header">FSA Farm Loans</h3>
+                            <div class="card-body">
+                              <p class="card-text">Watch the short video above. Then, click Get Started to see if you are eligible.</p>
+                            </div>
+                            <h3 class="card-header">Additional Resources</h3>
+                            <div class="card-body text-center">
+                                <div class="btn-group" role="group">
+                                    <a type="button" href="walkthrough.html" class="btn btn-secondary">Form Support</a>
+                                    <a type="button" href="guides.html" class="btn btn-secondary">Read The Guides</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
         </div>
-
-    </div>
     </main>
 
     <!-- ======= Footer ======= -->
