--- a/lrt.html
+++ b/lrt.html
@@ -18,7 +18,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="./css/stepper.css" rel="stylesheet" />
     <link href="./css/lrt.css" rel="stylesheet" />
-
+    <link href="css/walkthrough.css" rel="stylesheet">
 
     <title>USDA - Loan Readiness Tool</title>
 </head>
@@ -191,7 +191,7 @@
                                 <a class="mm-mobile-top-nav home" href="/guides.html">Guides</a>
                                 <a class="mm-mobile-top-nav home" href="/lrt.html">Eligibility Assessment</a>
                                 <a class="mm-mobile-top-nav home" href="/lrt.html?discovery">Loan Discovery</a>
-                                <a class="mm-mobile-top-nav home" href="/workthrough.html">Form Support</a>
+                                <a class="mm-mobile-top-nav home" href="/walkthrough.html">Form Support</a>
                             </div>
                         </div>
                         <div class="mm-utility-nav">
@@ -228,31 +228,159 @@
 
     <!-- End Header -->
 
+    <main id="main-content">
+
+        <div class="container page">
+            <div class="row">
+                <div class="col-md-12">
 
 
-    <div class="container page">
-        <div class="row">
-            <div class="col-md-12">
-
-
-                <section class="mdl-stepper">
-                    <div class="mdl-grid">
-                        <div class="mdl-cell mdl-cell--12-col">
-                            <!-- markup -->
-                            <ul id="lrt-stepper">
-                            </ul>
+                    <section class="mdl-stepper">
+                        <div class="mdl-grid">
+                            <div class="mdl-cell mdl-cell--12-col">
+                                <!-- markup -->
+                                <ul id="lrt-stepper">
+                                </ul>
+                            </div>
                         </div>
-                    </div>
-                </section>
+                    </section>
 
 
 
 
 
+                </div>
             </div>
         </div>
-    </div>
+    </main>
 
+    <!-- ======= Footer ======= -->
+    <footer>
+        <div class="footer-primary-section">
+            <div class="container">
+                <div class="row">
+                    <div class="medium-12">
+                    <nav class="footer-site-nav" aria-labelledby="block-farmers-update-mainnavigation-2-menu" id="block-farmers-update-mainnavigation-2">
+                        <h2 class="usa-sr-only" id="block-farmers-update-mainnavigation-2-menu">Main navigation - Footer</h2>
+                        <ul>
+                            <li><a href="/" aria-label="Go to Home Page" class="is-active"><span>Home</span></a></li>
+                            <li><a href="/guides.html" class="page-link" data-label="/guides.html" aria-label="Go to Guides Page" data-category="Guides">Guides</a></li>
+                            <li><a href="/lrt.html" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">Eligibility Assessment</a></li>
+                            <li><a id="loanDiscovery" href="/lrt.html?discovery" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Discovery Tool" data-category="Readiness">Loan Discovery</a></li>
+                            <li><a href="/walkthrough.html" class="page-link" data-label="/walkthrough.html" aria-label="Go to Form Support Page" data-category="Loans">Form Support</a></li>
+                        </ul>
+                    </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-secondary-section footer-widget">
+            <div class="container">
+                <div class="row footer-links-container pb-12">
+                    <div class="col">
+                        <nav class="footer-links-nav single-column" aria-labelledby="footernav-legal" id="footernav-legal-container">
+                            <ul class="menu">
+                                <li class="menu-item"><a href="https://www.farmers.gov" aria-label="Go to Farmers.gov">Farmers.gov</a></li>
+                                <li class="menu-item"><a href="https://www.usa.gov" aria-label="Go to USA.gov">USA.gov</a></li>
+                                <li class="menu-item"><a href="https://www.usda.gov" aria-label="Go to USDA.gov">USDA.gov</a></li>
+                                <li class="menu-item"><a href="https://www.whitehouse.gov" aria-label="Go to Whitehouse.gov">Whitehouse.gov</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="col">
+                        <nav class="footer-links-nav single-column" aria-labelledby="footernav-resources" id="footernav-resources-container">
+                            <ul class="menu">
+                                <li class="menu-item"><a href="https://www.fsa.usda.gov/help/accessibility-statement/index" aria-label="Go to FSA Accessibility Statement">Accessibility Statement</a></li>
+                                <li class="menu-item"><a href="http://ask.usda.gov/s/" aria-label="Go to Ask USDA">Common Questions</a></li>
+                                <li class="menu-item"><a href="https://www.fsa.usda.gov/news-room/efoia/index" aria-label="Go to USDA.gov">Freedom of Information Act</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="col">
+                        <nav class="footer-links-nav single-column" aria-labelledby="footernav-resources" id="footernav-resources-container">
+                            <ul class="menu">
+                                <li class="menu-item"><a href="https://www.fsa.usda.gov/programs-and-services/farm-service-agency-no-fear-act-report-information/index">No FEAR Report</a></li>
+                                <li class="menu-item"><a href="https://www.ocio.usda.gov/policy-directives-records-forms/information-quality-activities">Information Quality</a></li>
+                                <li class="menu-item"><a href="https://www.fsa.usda.gov/help/non-discrimination-statement/index">Non-Discrimination Statement</a></li>
+                            </ul>
+                        </nav>
+                    </div>                   
+                    <div class="col">
+                        <nav class="footer-links-nav single-column" aria-labelledby="footernav-resources" id="footernav-resources-container">
+                            <ul class="menu">
+                                <li class="menu-item"><a href="https://www.fsa.usda.gov/help/policies-and-links/index">Policies and Links</a></li>
+                                <li class="menu-item"><a href="https://www.fsa.usda.gov/help/privacy-policy/index">Privacy Policy</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>      
+  
+        <div class="footer-tertiary-section mt-8">
+            <div class="container">
+                <div class="row">                
+                    <div class="medium-9 footer-branding agency-banner">
+                        <div class="agency-logo">
+                            <span class="agency-logo">
+                                <img id="block-farmers-update-branding--2" class=" ls-is-cached lazyloaded footer-logo" loading="lazy" src="/images/usda-symbol.svg" alt="USDA Logo">
+                            </span>
+                            <a class="agency-logo-text" href="/" aria-label="Farm Service Agency - U.S. DEPARTMENT OF AGRICULTURE Farm Loan Walkthrough">
+                                <div class="agency-identity">
+                                    <div class="agency-name">Farm Service Agency</div>
+                                    <div class="tagline">U.S. DEPARTMENT OF AGRICULTURE</div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="medium-3 footer-social">
+                        <div class="grid-col-auto"> 
+                            <a class="usa-social-link usa-social-link--facebook" href="http://www.facebook.com/usda/"> 
+                                <img alt="facebook-lo" src="https://www.fsa.usda.gov/web_resources/themes/USDA-FSA/images/social-icons/facebook-icon.svg"> 
+                                <span>Facebook</span> 
+                            </a>                     
+                        </div> 
+                        <div class="grid-col-auto"> 
+                            <a class="usa-social-link usa-social-link--youtube" href="http://www.youtube.com/usda/"> 
+                                <img alt="youtube-lo" src="https://www.fsa.usda.gov/web_resources/themes/USDA-FSA/images/social-icons/youtube-icon.svg"> 
+                                <span>YouTube</span> 
+                            </a>                    
+                        </div> 
+                        <div class="grid-col-auto"> 
+                            <a class="usa-social-link usa-social-link--twitter" href="http://www.twitter.com/usdafsa"> 
+                                <img alt="twitter-lo" src="https://www.fsa.usda.gov/web_resources/themes/USDA-FSA/images/social-icons/twitter-icon.svg"> 
+                                <span>Twitter</span> 
+                            </a>                     
+                        </div> 
+                        <div class="grid-col-auto"> 
+                            <a class="usa-social-link usa-social-link--govdelivery" href="https://public.govdelivery.com/accounts/USDAFARMERS/subscriber/new"> 
+                                <img alt="gov-delivery-lo" src="https://www.fsa.usda.gov/web_resources/themes/USDA-FSA/images/social-icons/gov-delivery-icon.svg"> 
+                                <span>Twitter</span> 
+                            </a>                     
+                        </div> 
+                        <div class="grid-col-auto"> 
+                            <a class="usa-social-link usa-social-link--rss" href="https://dts.fsa.usda.gov/feeds/rss/fsa.usda.gov/news-releases/www.fsa.usda.gov/"> 
+                                <img alt="rss-lo" src="https://www.fsa.usda.gov/web_resources/themes/USDA-FSA/images/social-icons/rss-icon.svg"> 
+                                <span>RSS</span> 
+                            </a>                     
+                        </div>
+                    </div>
+                </div>  
+                <div class="footer-bottom">
+                    <div class="farmers-basic-block" id="block-helpdeskfooterlink-3">        
+                        <div class="clearfix text-formatted field field--name-body field--type-text-with-summary field--label-hidden field__item">
+                            <div class="helpdesk subnav-content">
+                                <a href="mailto:usdafpacbc@servicenowservices.com">Contact technical support</a>
+                                <span>for help with this website.</span>
+                            </div> 
+                        </div>  
+                    </div>  
+                </div>
+            </div>
+        </div>
+         
+    </footer>
+    <!-- End Footer -->
     <!-- JavaScript -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" type="text/javascript"></script>
     <script src="https://code.getmdl.io/1.2.1/material.js" type="text/javascript"></script>
