updated to match master

--- a/index.html
+++ b/index.html
@@ -139,15 +139,15 @@
                         </div>
                     </div>
                     <div id="search-field">
-                        <form class="search" action="[ SEARCH URL ]" data-drupal-form-fields="affiliate,header-search">
+                        <form class="search" action="walkthrough.html" data-drupal-form-fields="affiliate,header-search">
                             <div role="search" aria-label="Site Search">
                                 <input name="utf8" type="hidden" value="✓">
-                                <input id="affiliatename" name="affiliate" type="hidden" value="[ SITE DOMAIN ]">
-                                <label class="usa-sr-only" for="header-search">Search [ SITE DOMAIN ]</label>
+                                <input id="affiliatename" name="affiliate" type="hidden" value="Application Forms">
+                                <label class="usa-sr-only" for="header-search">Search Application Forms</label>
                                 <input id="header-search" autocomplete="off" name="query" type="search" placeholder="Search Application Forms" tabindex="0">
                                 <button type="submit" tabindex="0">    
-                <span class="usa-sr-only">Search</span>
-              </button>
+                                    <span class="usa-sr-only">Search</span>
+                                </button>
                                 <input name="commit" type="hidden" value="Search">
                             </div>
                         </form>
@@ -161,20 +161,20 @@
                         <div class="mm-mobile-menu-close">
                             <span>close</span>
                         </div>
+                        <!-- <div class="mm-signup">
+                            <span class="utility-nav-buttons">    
+                                <a class="btn tertiary utility-nav-links" href="/working-with-us/sign-in" title="LOG IN | SIGN UP">        LOG IN | SIGN UP    </a>
+                            </span>
+                        </div> -->
                         <div class="mm-top-section-container">
-                            <div class="mm-signup">
-                                <span class="utility-nav-buttons">    
-                                    <a class="btn tertiary utility-nav-links" href="/working-with-us/sign-in" title="LOG IN | SIGN UP">        LOG IN | SIGN UP    </a>
-                                </span>
-                            </div>
                             <div class="mm-search">
                                 <div id="search-field-mobile">
-                                    <form class="search" action="[ SITE SEARCH URL ]" data-drupal-form-fields="affiliate,header-search">
+                                    <form class="search" action="walkthrough.html" data-drupal-form-fields="affiliate,header-search">
                                         <div role="search" aria-label="Mobile Site Search">
                                             <input name="utf8" type="hidden" value="✓">
-                                            <input id="affiliatename-mobile" name="affiliate" type="hidden" value="[ SITE DOMAIN ]">
-                                            <label class="usa-sr-only" for="header-search-mobile">Search [ SITE DOMAIN ]</label>
-                                            <input id="header-search-mobile" autocomplete="off" name="query" type="search" placeholder="Search [ SITE DOMAIN ]" tabindex="0">
+                                            <input id="affiliatename-mobile" name="affiliate" type="hidden" value="Application Form Search">
+                                            <label class="usa-sr-only" for="header-search-mobile">Search Application Forms</label>
+                                            <input id="header-search-mobile" autocomplete="off" name="query" type="search" placeholder="Search Application Forms" tabindex="0">
                                             <button type="submit" tabindex="0">                
                                             <span class="usa-sr-only">Search</span>            
                                             </button>
@@ -188,7 +188,7 @@
                                 <a class="mm-mobile-top-nav home" href="/guides.html">Guides</a>
                                 <a class="mm-mobile-top-nav home" href="/lrt.html">Eligibility Assessment</a>
                                 <a class="mm-mobile-top-nav home" href="/lrt.html?discovery">Loan Discovery</a>
-                                <a class="mm-mobile-top-nav home" href="/walkthrough.html">Form Support</a>
+                                <a class="mm-mobile-top-nav home" href="/workthrough.html">Form Support</a>
                             </div>
                         </div>
                         <div class="mm-utility-nav">
@@ -206,9 +206,9 @@
                                     <a href="https://www.usda.gov" aria-label="USDA.gov" tabindex="0">USDA.gov</a>
                                 </li>
                             </ul>
-                            <span class="utility-nav-buttons">
+                            <!-- <span class="utility-nav-buttons">
                               <a class="btn tertiary utility-nav-links" href="/working-with-us/sign-in" title="LOG IN | SIGN UP">    LOG IN | SIGN UP</a>
-                            </span>
+                            </span> -->
                         </div>
                     </div>
                 </div>
@@ -229,74 +229,60 @@
 
     <main id="main-content">
 
-        <div class="container">
-            <div class="row">
-                <div class="primary-region medium-12">
-                    <h1 class="primary-region__title">
-                        Are your ready to apply for a farm loan?
+    <div class="container">
+        <div class="row">
+            <div class="primary-region medium-12">
+                <h1 class="primary-region__title">
+                    Are your ready to apply for a farm loan?
 
-                    </h1>
+                </h1>
+            </div>
+        </div>
+    </div>
+
+    <div class="container page">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="content-card accent-top h-100">
+                    <img src="/images/zoomph.jpg" class="card-img-top" alt="Get Started">
+                    <h3 class="card-header">Start your journey with FSA</h3>
+                    <div class="card-body">
+                        <ul>
+                            <li>Am I eligible for an FSA Farm Loan?</li>
+                            <li>Which loans are right for me?</li>
+                            <li>Where can I get  help completing the loan application forms?</li>
+                        </ul>
+                    </div>
+                    <a href="lrt.html" style="text-decoration: none;">
+                        <div class="card-footer btn-start">
+                            Get Started
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="content-card accent-top h-100">
+                    <iframe height="440px" width="100%" src="https://www.youtube.com/embed/dPfq0DrkUSE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <h3 class="card-header">FSA Farm Loans</h3>
+                    <div class="card-body">
+                        <p class="card-text">Watch the short video above. Then, click Get Started to see if you are eligible.</p>
+                    </div>
+                    <div class="divider-line"></div>
+                    <h3 class="card-header">Additional Resources</h3>
+                    <div class="spacer">&nbsp;</div>
+
+                    <div class="card-body">
+                            <ul>
+                                <li><a class="text-link" href="walkthrough.html">Form Support</a></li>
+                                <li><a class="text-link" href="guides.html">Read The Guides</a></li>
+                            </ul>
+
+                    </div>
                 </div>
             </div>
         </div>
-
-        <div class="container page">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="content-card accent-top h-100">
-                        <div class="img">
-                            <img src="/images/farm-loans-icon.png" alt="Farm">
-                        </div>
-                        <div class="content">
-                            
-                            <div class="container">
-                                <div class="card">
-                                    <img src="/images/zoomph.jpg" class="card-img-top" alt="Get Started">
-                                    <h3 class="card-header">Start your journey with FSA</h3>
-                                    <div class="card-body">
-                                        <ul>
-                                            <li>Am I eligible for an FSA Farm Loan?</li>
-                                            <li>Which loans are right for me?</li>
-                                            <li>Where can I get  help completing the loan application forms?</li>
-                                        </ul>
-                                    </div>
-                                    <a href="lrt.html" style="text-decoration: none;">
-                                        <div class="card-footer btn-start">
-                                            Get Started
-                                        </div>
-                                    </a>
-                                  </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-6">
-                    <div class="content-card accent-top h-100">
-                        <div class="img">
-                            <img src="/images/tractor-equipment-icon.svg" alt="Farm">
-                        </div>
-
-                        <div class="card">
-                            <iframe height="440px" src="https://www.youtube.com/embed/dPfq0DrkUSE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                            <h3 class="card-header">FSA Farm Loans</h3>
-                            <div class="card-body">
-                              <p class="card-text">Watch the short video above. Then, click Get Started to see if you are eligible.</p>
-                            </div>
-                            <h3 class="card-header">Additional Resources</h3>
-                            <div class="card-body text-center">
-                                <div class="btn-group" role="group">
-                                    <a type="button" href="walkthrough.html" class="btn btn-secondary">Form Support</a>
-                                    <a type="button" href="guides.html" class="btn btn-secondary">Read The Guides</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-        </div>
+    </div>
+    <div class="spacer">&nbsp;</div>
     </main>
 
     <!-- ======= Footer ======= -->
